--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -11,9 +11,11 @@ services:
     environment:
       NVIDIA_DRIVER_CAPABILITIES: compute,utility,graphics
       DISPLAY: $DISPLAY
+      PYTHONPATH: "${PYTHONPATH}:/home/leh19/workspace/aalto-submit"
     volumes:
       - ../:/volume
       - /tmp/.X11-unix:/tmp/.X11-unix
+      - /home/leh19/workspace/aalto-submit:/home/leh19/workspace/aalto-submit
     working_dir: /volume
     command: /bin/bash
     deploy:
